--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -5,23 +5,8 @@
 </div>
 <div class="row">
 	<hr>
-<<<<<<< HEAD
-	<div class="col-xs-12">
-		<a href="#" class="list-group-item clearfix"
-		   *ngFor="let recipe of recipes">
-			<div class="pull-left">
-				<h4 class="list-group-item-heading">{{ recipe.name }}</h4>
-				<p class="list-group-item-text">{{ recipe.description }}</p>
-			</div>
-			<span class="pull-right">
-				<img [src]="recipe.imagePath" alt="{{ recipe.name }}" class="img-responsive" style="max-height: 50px;">
-			</span>
-		</a>
-		<app-recipe-item></app-recipe-item>
-=======
-	<div class="col-xs-12" *ngFor="let recipeItem of recipes">
+	<div class="col-xs-12" *ngFor="let recipeItem of recipes" (click)="selectRecipe(recipeItem)">
 		<app-recipe-item [recipe]="recipeItem"></app-recipe-item>
->>>>>>> SECTION-4
 	</div>
 </div>
 
