--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -5,7 +5,7 @@
 </div>
 <div class="row">
 	<hr>
-	<div class="col-xs-12" *ngFor="let recipeItem of recipes" (click)="selectRecipe(recipeItem)">
+	<div class="col-xs-12" *ngFor="let recipeItem of recipes">
 		<app-recipe-item [recipe]="recipeItem"></app-recipe-item>
 	</div>
 </div>
