--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -3,6 +3,6 @@
 		<app-recipe-list (recipeSelected)="setSelectedRecipe($event)"></app-recipe-list>
 	</div>
 	<div class="col-md-7">
-		<app-recipe-detail [recipe]="recipe"></app-recipe-detail>
+		<app-recipe-detail *ngIf="recipe" [recipe]="recipe"></app-recipe-detail>
 	</div>
 </div>
