--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
-<app-header (sectionSelected)="onSectionSelected($event)"></app-header>
+<app-header></app-header>
 <div class="container">
 	<div class="row">
 		<div class="col-md-12">
-			<app-recipes *ngIf="sectionSelected === 'recipes'"></app-recipes>
-			<app-shopping-list *ngIf="sectionSelected === 'shopping-list'"></app-shopping-list>
+			<router-outlet></router-outlet>
 		</div>
 	</div>
 </div>
