--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -13,9 +13,9 @@
     <div class="button-group" appDropdown>
       <button type="button" class="btn btn-primary dropdown-toggle">Manage Recipe<span class="caret"></span></button>
       <ul class="dropdown-menu">
-        <li><a href="#" (click)="onAddToShoppingList()">To Shopping List</a></li>
-        <li><a href="#">Edit Recipe</a></li>
-        <li><a href="#">Delete</a></li>
+        <li><a (click)="onAddToShoppingList()" style="cursor: pointer">To Shopping List</a></li>
+        <li><a (click)="onRecipeEdit()" style="cursor: pointer">Edit Recipe</a></li>
+        <li><a style="cursor: pointer">Delete</a></li>
       </ul>
     </div>
   </div>
