--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,12 +1,12 @@
 <div class="row">
 	<div class="col-xs-12">
-		<button class="btn btn-success">New Recipe</button>
+		<button class="btn btn-success" (click)="onNewRecipe()">New Recipe</button>
 	</div>
 </div>
 <div class="row">
 	<hr>
-	<div class="col-xs-12" *ngFor="let recipeItem of recipes">
-		<app-recipe-item [recipe]="recipeItem"></app-recipe-item>
+	<div class="col-xs-12" *ngFor="let recipeItem of recipes; let i = index">
+		<app-recipe-item [recipe]="recipeItem" [index]="i"></app-recipe-item>
 	</div>
 </div>
 
