--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,21 +1,23 @@
 <div class="row">
   <div class="col-xs-12">
-    <form>
+    <form [formGroup]="shoppingListForm">
       <div class="row">
         <div class="col-sm-5 form-group">
           <label for="name">Name</label>
-          <input type="text" id="name" class="form-control" #nameInput>
+          <input type="text" id="name" class="form-control" formControlName="name">
         </div>
         <div class="col-sm-2 form-group">
           <label for="amount">Amount</label>
-          <input type="text" id="amount"  class="form-control" #amountInput>
+          <input type="number" id="amount"  class="form-control" formControlName="amount" pattern="^[1-9]+[0-9]*$">
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <button class="btn btn-success" type="button" (click)="onAddItem()">Add</button>
-          <button class="btn btn-danger" type="submit">Delete</button>
-          <button class="btn btn-primary" type="submit">Clear</button>
+          <button class="btn btn-success" type="button" (click)="onAddItem()" [disabled]="!shoppingListForm.valid">
+			  {{ editMode ? 'Update' : 'Add' }}
+		  </button>
+          <button *ngIf="editMode" class="btn btn-danger" type="submit" (click)="onDelete()">Delete</button>
+          <button class="btn btn-primary" type="submit" (click)="onClear()">Clear</button>
         </div>
       </div>
     </form>
