--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -15,7 +15,7 @@
       <ul class="dropdown-menu">
         <li><a (click)="onAddToShoppingList()" style="cursor: pointer">To Shopping List</a></li>
         <li><a (click)="onRecipeEdit()" style="cursor: pointer">Edit Recipe</a></li>
-        <li><a style="cursor: pointer">Delete</a></li>
+        <li><a style="cursor: pointer" (click)="onDelete()">Delete</a></li>
       </ul>
     </div>
   </div>
